--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@testing-library/user-event": "^12.8.3",
     "again": "0.0.1",
     "firebase": "^9.1.1",
+    "immer": "^9.0.7",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
